step 40
